specs/blueprints/errors/validation/missing_element.eno
# Querying a section for a required but missing element 

-- input
# section
-- input

-- javascript
parse(input).section('section').requiredElement('element');
-- javascript

-- php
Enolib\Parser::parse($input)->section('section')->requiredElement('element');
-- php

-- python
enolib.parse(input).section('section').required_element('element')
-- python

-- ruby
Enolib.parse(input).section('section').required_element('element')
-- ruby

## ValidationError

-- text
The element 'element' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 *    1 | # section
-- snippet

selection: [0,9] => [0,9]
